# SUSTech_CSE_Project

./: README.md
CS202_Computer_Organization_Project/: README.md  中期答辩文档.md  小组中期答辩自述文档_模板 (1).docx
CS202_Computer_Organization_Project/Constraints/: constraint.xdc  vgacons.txt
CS202_Computer_Organization_Project/Design Sources/: ALU.v  CPU.v  Data_mem.v  IFetch.v  IO.v  LedControl.v  MemOrIO.v  TubControl.v  cpuclk.v  instruction_control.v  reg_and_imm.v  switch.v  tub.v  vga.v  vga_char_set.v  vga_test.v  writeback_mux.v
CS202_Computer_Organization_Project/Simulation Result/: ALU_tb_behav.wcfg
CS202_Computer_Organization_Project/Simulation Sources/: ALU_tb.v  CPU_tb.v  Data_mem.v  IFetch_tb.v  cpuclk_tb.v  instruction_control_tb.v  reg_and_imm_tb.v
CS202_Computer_Organization_Project/test/: 2222.coe  3.coe  CPU.bit  auipc.asm  case2.asm  case5.asm  div.asm  final.coe  mul.asm  out(6).txt  rem.asm  situation1.asm  situation2.asm
CS202_Computer_Organization_Project/uart_tools/: prgmip32.coe  situation1.txt
CS207_Digital_Logic(109.7:100)/: README.md
CS207_Digital_Logic(109.7:100)/srcs/: key_press_detector.v  light.v  mode_change.v  power_control.v  sound_reminder.v  (+1 more)
CS207_Digital_Logic_2024Fall/: cons.xdc
CS219_Advanced_Programming(120:100)/: README.md
CS219_Advanced_Programming_2024Fall/: CMakeLists.txt  README.md  main.cpp
CS305-Computer_Network_Project/: README.md  README_CN_520.md  fanout_pic.py  nat_pic.py  peer_pic.py  run_dashboard.py  分工.md  动态区块链扩展开发文档.md  计网表格.xlsx
CS307_Principles_of_Database_System_Project2/: LICENSE  README.md  pom.xml
(+90 files in other folders)
